Compilation checkpoint